Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!

2.4.0.2401
----------
- Fix the filter field article selection problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&t=21665


2.4.0.2400
----------
- Remove command-shift-g as keyboard shortcut for creating group folder. This is now used for Find Previous.
- Show an alert when upgrading the database version, because it can take a while.
- Turn off animation of tab resizing. It was slow, superfluous and apparently sometimes caused drawing errors in the tab bar background.
- Fix crash when sorting articles by enclosure URL.
- Update SQLite to version 3.6.18.
- Add ability to "Show XML Source" for feeds, which is now cached locally.
- Add support for IDN (internationlized domain names) in the browser.
- Add new supported blog editor (Blogo).
- Increase the standard number of simultaneous refresh downloads to 20.
- Redo browser and filter bar UI. Slimmer look, new buttons.
- Vienna's UI now correctly dims when the application is the background.
- Enable printing of web-pages from the built-in browser.
- Vienna now shows an error page with useful information when the browser fails to load a resource.
- Fix bug where changing the layout would hide the tab bar until relaunch.
- Fix bug that prevented the user from searching for text within a web-page.
- Fix drawing errors and artifacts in the grey title bars.
- Check for https:// as well as http:// on the pasteboard when adding a new subscription.
- Fix background drawing errors in main window and remove custom window background.
- Fix drawing error in Downloads window and remove custom background.
- Fix bug and exception where clicking on a feed link launched Vienna but failed to subscribe to the feed.